// Copyright IBM Corp. All Rights Reserved.
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package common.access_control;

option java_package = "org.hyperledger.cacti.weaver.protos.common.access_control";
option go_package = "github.com/hyperledger/cacti/weaver/common/protos-go/v2/common";

// AccessControlPolicy specifies a set of data that can be accessed by some
// SecurityGroup
message AccessControlPolicy {
  string securityDomain = 1;
  repeated Rule rules = 2;
}

// Rule represents a single data access rule for the AccessControlPolicy
message Rule {
  string principal = 1;
  string principalType = 2;
  string resource = 3;
  bool read = 4;
}
